fix alignment for text input fields on signup page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,7 @@ hr {
 }
 
 .text-input {
+    width: 100%;
     background: transparent;
     color: #fafafa;
     border: 1px solid #fafafa;
